--- a/ch10/10.2.27.md
+++ b/ch10/10.2.27.md
@@ -1,1 +1,2 @@
-
+Question:
+![S__11247667](https://github.com/HWTeng-Course/202402-Statistics/assets/162124820/c4c34419-0826-4458-9d78-940147f2351e)
